--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,38 @@
 spring.application.name=pc-builder-backend
-server.port=8080
+server.port=${SERVER_PORT:8080}
+
+# Storage configuration
 pcbuilder.storage.data-dir=storage/data
 pcbuilder.storage.logs-dir=storage/logs
 pcbuilder.storage.components-json=${pcbuilder.storage.data-dir}/components.json
 pcbuilder.storage.components-csv=${pcbuilder.storage.data-dir}/components.csv
 pcbuilder.storage.builds-json=${pcbuilder.storage.data-dir}/builds.json
 pcbuilder.storage.scraping-log=${pcbuilder.storage.logs-dir}/scraping-log.csv
+
+# Scraper configuration
 pcbuilder.scraper.provider=APIFY
 pcbuilder.scraper.scheduler-enabled=true
 pcbuilder.scraper.refresh-interval=PT12H
 pcbuilder.scraper.initial-delay=PT1M
-pcbuilder.scraper.apify.token=apify_api_DuSltjOwC07eYoc5pEHypJKKSWxTGm16g2Z6
+
+# Apify scraper settings (requires APIFY_TOKEN environment variable)
+pcbuilder.scraper.apify.token=${APIFY_TOKEN:}
 pcbuilder.scraper.apify.memory-mb=512
 pcbuilder.scraper.apify.max-items=1
 pcbuilder.scraper.apify.include-images=true
 pcbuilder.scraper.apify.include-specs=true
 pcbuilder.scraper.apify.category-param=category
+
+# JSoup scraper settings (alternative to Apify)
 pcbuilder.scraper.jsoup.base-url=https://pcpartpicker.com/products
 pcbuilder.scraper.jsoup.max-pages=10
 pcbuilder.scraper.jsoup.delay-between-requests=PT3S
 
 # Database configuration (PostgreSQL / Neon)
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://${PGHOST:ep-withered-shadow-afbfmair-pooler.c-2.us-west-2.aws.neon.tech}:${PGPORT:5432}/${PGDATABASE:neondb}?sslmode=${PGSSLMODE:require}&channelBinding=${PGCHANNELBINDING:require}}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:${PGUSER:neondb_owner}}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:${PGPASSWORD:npg_KUrsCc03vmSI}}
+# Configure using environment variables: PGHOST, PGPORT, PGDATABASE, PGUSER, PGPASSWORD
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:pcbuilder}?sslmode=${PGSSLMODE:prefer}&channelBinding=${PGCHANNELBINDING:prefer}}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:${PGUSER:postgres}}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:${PGPASSWORD:}}
 spring.datasource.hikari.maximum-pool-size=${SPRING_DATASOURCE_MAX_POOL_SIZE:5}
 spring.datasource.hikari.minimum-idle=1
 spring.datasource.hikari.connection-timeout=20000
