Add security.md file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,20 +10,12 @@ pcbuilder.storage.builds-json=${pcbuilder.storage.data-dir}/builds.json
 pcbuilder.storage.scraping-log=${pcbuilder.storage.logs-dir}/scraping-log.csv
 
 # Scraper configuration
-pcbuilder.scraper.provider=APIFY
+pcbuilder.scraper.provider=JSOUP
 pcbuilder.scraper.scheduler-enabled=true
 pcbuilder.scraper.refresh-interval=PT12H
 pcbuilder.scraper.initial-delay=PT1M
 
-# Apify scraper settings (requires APIFY_TOKEN environment variable)
-pcbuilder.scraper.apify.token=${APIFY_TOKEN:}
-pcbuilder.scraper.apify.memory-mb=512
-pcbuilder.scraper.apify.max-items=1
-pcbuilder.scraper.apify.include-images=true
-pcbuilder.scraper.apify.include-specs=true
-pcbuilder.scraper.apify.category-param=category
-
-# JSoup scraper settings (alternative to Apify)
+# JSoup scraper settings
 pcbuilder.scraper.jsoup.base-url=https://pcpartpicker.com/products
 pcbuilder.scraper.jsoup.max-pages=10
 pcbuilder.scraper.jsoup.delay-between-requests=PT3S
