Backend semicompleted and ready to be connected to the frontend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,5 +36,5 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
-spring.sql.init.mode=always
-spring.sql.init.encoding=UTF-8
+# SQL initialization disabled - database already has schema and data
+spring.sql.init.mode=never
