Better exception handling and N+1 queries optimization, needs to optimize more loading times

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=pc-builder-backend
 server.port=${SERVER_PORT:8080}
 
+# Allow URLs with or without trailing slash to match the same handler
+spring.mvc.trailing-slash-match=true
+
 # Storage configuration
 pcbuilder.storage.data-dir=storage/data
 pcbuilder.storage.logs-dir=storage/logs
