--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,5 +39,16 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
+# Hibernate performance optimizations
+spring.jpa.properties.hibernate.default_batch_fetch_size=50
+spring.jpa.properties.hibernate.jdbc.batch_size=50
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.generate_statistics=false
+
+# Jackson serialization settings
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.jackson.default-property-inclusion=non_null
+
 # SQL initialization disabled - database already has schema and data
 spring.sql.init.mode=never
